--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <input type="number" id="num1" placeholder="Number 1" />
     <input type="number" id="num2" placeholder="Number 2" />
     <button>Add!</button>
+    <input type="text" id="user-input">
   </body>
 </html>
